# quine-mccluskey

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fuzz.py  mkdist.sh  pyproject.toml  qm.py  quine-mccluskey.py  setup.py  test.py
.github/workflows/: python-package.yml
doc/source/: conf.py  index.rst
quine_mccluskey/: qm.py
quine_mccluskey_tomas789/: __init__.py  qm.py
src/: qmc.cpp
tests/: test.py  test_qm.py
