[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quine_mccluskey_tomas789"
description = "An implementation of the Quine-McCluskey algorithm"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Quine McCluskey", "XOR"]
license = {text = "BSD"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "quine_mccluskey_tomas789.qm.QuineMcCluskey.__version__"}
readme = {file = ["README.md"]}

[tool.pylint]
max-line-length = 127
disable = [
    "invalid-name", 
    "too-many-nested-blocks", 
    "too-many-locals", 
    "dangerous-default-value",
    "too-many-branches", 
    "too-many-statements"
]

[tool.distutils.bdist_wheel]
universal = true
